--- a/src/scss/pages/_signin-seller.scss
+++ b/src/scss/pages/_signin-seller.scss
@@ -1,8 +1,11 @@
 .img-store{
     height: 100vh;
-    width: 739px;
+    width: 100%;
     background-repeat: no-repeat;
     background-image: url("/assets/img/seller-img.png");
+    background-size: contain;
+    background-position: 100% 0;
+    z-index: -10;
 }
 
 .conStore{
